Rename level classes from "grass", "mountains" to "level1", "level2", etc.
This reduces confusion between the "grass" class which draws some grass on the
ground and "grass" styles aimed at a particular level.

--- a/assets/www/test.html
+++ b/assets/www/test.html
@@ -32,7 +32,7 @@ require([], function() {
 </head>
 
 <body class="anim n9 menu">
-<div id="gamelevel" class="level mountains ground">
+<div id="gamelevel" class="level level2 ground">
 <div id="game"><div id="level">
  <div id="background">
   <div class="ground">
@@ -127,7 +127,7 @@ require([], function() {
 </div>
 </div><!-- gamelevel -->
 
-<div id="menu"><div class="level mountains exposed-troposphere">
+<div id="menu"><div class="level level2 exposed-troposphere">
  <div class="background">
    <div class="mountains"></div>
    <div class="mesosphere">
