CSS, graphics, and video for level 3 (sand).

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -37,6 +37,7 @@ var require = { waitSeconds: 30 };
    <div class="mountain"></div>
   </div>
   <div class="troposphere">
+   <div class="sun"></div>
    <div class="cloud c2"></div>
   </div>
   <div class="stratosphere">
@@ -127,6 +128,9 @@ var require = { waitSeconds: 30 };
 <div id="menu"><div class="level level1 exposed-none">
  <div class="background">
    <div class="mountains"></div>
+   <div class="stratosphere">
+     <div class="sun"></div>
+   </div>
    <div class="mesosphere">
      <div class="stars"></div>
    </div>
