CSS, graphics, and video for level 4 (snow).
This level teaches basic morphology: the cat/a cat/cats.

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -35,6 +35,7 @@ var require = { waitSeconds: 30 };
  <div id="background">
   <div class="ground">
    <div class="mountain"></div>
+   <div class="tree"></div>
   </div>
   <div class="troposphere">
    <div class="sun"></div>
@@ -47,9 +48,10 @@ var require = { waitSeconds: 30 };
   </div>
   <div class="mesosphere">
    <div class="stars"></div>
-   <div class="satellite1"></div>
    <div class="satellite2"></div>
+   <div class="satellite1"></div>
   </div>
+  <div class="snowflakes"></div>
  </div>
  <div id="nell" class="nells">
   <div class="ground">
@@ -67,6 +69,7 @@ var require = { waitSeconds: 30 };
      <div class="nellscaler"><div class="nell"><div class="hair"></div><div class="head"></div></div></div>
      <div class="foreground"></div>
     </div>
+    <div class="ufo"></div>
   </div>
   <div class="mesosphere">
    <div class="astronaut">
@@ -127,12 +130,12 @@ var require = { waitSeconds: 30 };
 
 <div id="menu"><div class="level level1 exposed-none">
  <div class="background">
+   <div class="mesosphere">
+     <div class="stars"></div>
+   </div>
    <div class="mountains"></div>
    <div class="stratosphere">
      <div class="sun"></div>
-   </div>
-   <div class="mesosphere">
-     <div class="stars"></div>
    </div>
  </div>
  <div class="nells">
