--- a/assets/www/test.html
+++ b/assets/www/test.html
@@ -40,6 +40,7 @@ require([], function() {
  <div id="background">
   <div class="ground">
    <div class="mountain"></div>
+   <div class="tree"></div>
   </div>
   <div class="troposphere">
    <div class="sun"></div>
@@ -52,9 +53,10 @@ require([], function() {
   </div>
   <div class="mesosphere">
    <div class="stars"></div>
-   <div class="satellite1"></div>
    <div class="satellite2"></div>
+   <div class="satellite1"></div>
   </div>
+  <div class="snowflakes"></div>
  </div>
  <div id="nell" class="nells">
   <div class="ground">
@@ -72,6 +74,7 @@ require([], function() {
      <div class="nellscaler"><div class="nell"><div class="hair"></div><div class="head"></div></div></div>
      <div class="foreground"></div>
     </div>
+    <div class="ufo"></div>
   </div>
   <div class="mesosphere">
    <div class="astronaut">
@@ -138,12 +141,12 @@ require([], function() {
 
 <div id="menu"><div class="level level2 exposed-troposphere">
  <div class="background">
+   <div class="mesosphere">
+     <div class="stars"></div>
+   </div>
    <div class="mountains"></div>
    <div class="stratosphere">
      <div class="sun"></div>
-   </div>
-   <div class="mesosphere">
-     <div class="stars"></div>
    </div>
  </div>
  <div class="nells">
