Initialize index.html classes for cleaner startup.
The splashscreen on Firefox/Android goes away as soon as documentready fires.
We want to be sure we've got something nice on screen by that point, so
preinitialize the body and menu classes to start us up on the menu in level1
with the cloudshade down.

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -28,7 +28,7 @@ var require = { waitSeconds: 30 };
 </script>
 <script src="require.js" data-main="index.js" type="text/javascript"></script>
 </head>
-<body class='appcache-allinfo'>
+<body class="appcache-allinfo menu">
 <script type="text/javascript" src="appcacheui.js"></script>
 <div id="gamelevel" class="level">
 <div id="game"><div id="level">
@@ -124,7 +124,7 @@ var require = { waitSeconds: 30 };
 <div id="buttons"></div>
 </div><!-- gamelevel -->
 
-<div id="menu"><div class="level">
+<div id="menu"><div class="level level1 exposed-none">
  <div class="background">
    <div class="mountains"></div>
    <div class="mesosphere">
