Update to 2cdadaf68108313b5971b53e845eb5b36bc54534 (level 3).

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ var require = { waitSeconds: 30 };
 </script>
 <script src="require.js" data-main="index.js" type="text/javascript"></script>
 </head>
-<body class='appcache-allinfo'>
+<body class="appcache-allinfo menu">
 <script type="text/javascript" src="appcacheui.js"></script>
 <div id="gamelevel" class="level">
 <div id="game"><div id="level">
@@ -36,6 +36,7 @@ var require = { waitSeconds: 30 };
    <div class="mountain"></div>
   </div>
   <div class="troposphere">
+   <div class="sun"></div>
    <div class="cloud c2"></div>
   </div>
   <div class="stratosphere">
@@ -123,9 +124,12 @@ var require = { waitSeconds: 30 };
 <div id="buttons"></div>
 </div><!-- gamelevel -->
 
-<div id="menu"><div class="level">
+<div id="menu"><div class="level level1 exposed-none">
  <div class="background">
    <div class="mountains"></div>
+   <div class="stratosphere">
+     <div class="sun"></div>
+   </div>
    <div class="mesosphere">
      <div class="stars"></div>
    </div>
