--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ var require = { waitSeconds: 30 };
  <div id="background">
   <div class="ground">
    <div class="mountain"></div>
+   <div class="tree"></div>
   </div>
   <div class="troposphere">
    <div class="sun"></div>
@@ -46,9 +47,10 @@ var require = { waitSeconds: 30 };
   </div>
   <div class="mesosphere">
    <div class="stars"></div>
-   <div class="satellite1"></div>
    <div class="satellite2"></div>
+   <div class="satellite1"></div>
   </div>
+  <div class="snowflakes"></div>
  </div>
  <div id="nell" class="nells">
   <div class="ground">
@@ -66,6 +68,7 @@ var require = { waitSeconds: 30 };
      <div class="nellscaler"><div class="nell"><div class="hair"></div><div class="head"></div></div></div>
      <div class="foreground"></div>
     </div>
+    <div class="ufo"></div>
   </div>
   <div class="mesosphere">
    <div class="astronaut">
@@ -126,12 +129,12 @@ var require = { waitSeconds: 30 };
 
 <div id="menu"><div class="level level1 exposed-none">
  <div class="background">
+   <div class="mesosphere">
+     <div class="stars"></div>
+   </div>
    <div class="mountains"></div>
    <div class="stratosphere">
      <div class="sun"></div>
-   </div>
-   <div class="mesosphere">
-     <div class="stars"></div>
    </div>
  </div>
  <div class="nells">
