--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -28,7 +28,7 @@ var require = { waitSeconds: 30 };
 </script>
 <script src="require.js" data-main="index.js" type="text/javascript"></script>
 </head>
-<body class="appcache-allinfo menu">
+<body class="menu">
 <script type="text/javascript" src="appcacheui.js"></script>
 <div id="gamelevel" class="level">
 <div id="game"><div id="level">
