Update to 9a45bffd0dd4909b42f66cd6b81baf8b11af692b (misc updates).

--- a/install.html
+++ b/install.html
@@ -7,7 +7,7 @@
 
 <body>
 
-<p>This page allows you to install Nell's Balloons as a web app.</p>
+<p>This page allows you to install Nell's Balloons v8 as a web app.</p>
 <button onclick="window.navigator.mozApps.install('http://nell-balloons.github.cscott.net/manifest.webapp')">Install!</button>
 </body>
 </html>
