--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -20,8 +20,7 @@
       href="images/splash-640x920.png"
       media="screen and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2)" />
 <title>Nell's Balloons</title>
-<link rel="stylesheet" href="appcacheui.css" />
-<link rel="stylesheet" href="style.css" />
+<link rel="stylesheet" type="text/css" href="style/index.css" />
 <script type="text/javascript" charset="utf-8" src="cordova-1.7.0.js"></script>
 <script>/* configure require.js */
 var require = { waitSeconds: 30 };
