--- a/assets/www/test.html
+++ b/assets/www/test.html
@@ -8,7 +8,7 @@
 <link rel="shortcut icon" href="images/icon-16.ico" />
 <link rel="apple-touch-icon" href="images/icon-128.png" />
 <title>CSS Keyframe Animation test</title>
-<link rel="stylesheet" href="style.css" />
+<link rel="stylesheet" type="text/css" href="style/index.css" />
 <script type="text/javascript" src="require.js"></script>
 <script type="text/javascript">
 require([], function() {
