Update to be9ff324301025837068a52eebf861daf6710c1b.

--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
       href="images/splash-640x920.png"
       media="screen and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2)" />
 <title>Nell's Balloons</title>
-<link rel="stylesheet" href="appcacheui.css" />
-<link rel="stylesheet" href="style.css" />
+<link rel="stylesheet" type="text/css" href="style/index.css" />
 <script>/* configure require.js */
 var require = { waitSeconds: 30 };
 </script>
